--- a/frontend/src/Pages/Shop/index.css
+++ b/frontend/src/Pages/Shop/index.css
@@ -1,3 +1,49 @@
-.home{
-    overflow-y: auto;
+.shop{
+    overflow: hidden;
+    display:flex;
+    flex-direction:column;
+    justify-content:center;
+}
+.shop-content{
+    padding-top: 70px;
+    min-height:1000px;
+    display: flex;
+    justify-content: center;
+    overflow-x: hidden;
+}
+.productList{
+    background-color: white;
+    width:95vw;
+    margin:30px;
+    border-radius: 20px;
+    /* Write code foe shadow*/
+    box-shadow: 0 0 10px rgba(0,0,0,0.5);
+    display: flex;
+    flex-direction: row;
+}
+.filter{
+    background-color: white;
+    width:25%;
+    margin:5px;
+    border-radius: 20px 0 0 20px;
+}
+.product{
+    background-color: white;
+    width:75%;
+    margin:5px;
+    border-radius: 0 20px 20px 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.row1{
+    height:100px;
+    background-color: #FACBEA;
+    border-radius: 0 20px 0 0;
+}
+.row2{
+    height:100%;
+    border-radius: 0 0 20px 0;
+    overflow-y:auto;
+    overflow-x: hidden;
 }
