--- a/frontend/src/components/Footer/index.css
+++ b/frontend/src/components/Footer/index.css
@@ -5,7 +5,7 @@ footer {
     padding: 0px;
     display: flex;
     flex-direction: column;
-    position: fixed;
+    position:static;
     bottom: 0px;
     width: 100vw;
     overflow: auto;
