--- a/frontend/src/Pages/Shop/index.css
+++ b/frontend/src/Pages/Shop/index.css
@@ -26,6 +26,7 @@
     width:25%;
     margin:5px;
     border-radius: 20px 0 0 20px;
+    border-right: #a24684 4px solid;
 }
 .product{
     background-color: white;
@@ -46,4 +47,16 @@
     border-radius: 0 0 20px 0;
     overflow-y:auto;
     overflow-x: hidden;
+}
+.sellbook{
+    background-color: #a24684;
+    color: white;
+    width:250px;
+    height:50px;
+    margin:20px;
+    border-radius: 20px;
+    text-align: center;
+    font-size: 20px;
+    position:relative;
+    right: -35%;
 }
